@@ -133,6 +133,9 @@
    - markus@cvs.openbsd.org 2002/03/21 20:51:12
      [sshd_config]
      add privsep (off)
+   - markus@cvs.openbsd.org 2002/03/21 21:23:34
+     [sshd.c]
+     add privsep_preauth() and remove 1 goto; ok provos@
 
 20020317
  - (tim) [configure.ac] Assume path given with --with-pid-dir=PATH is wanted,
@@ -7979,4 +7982,4 @@
  - Wrote replacements for strlcpy and mkdtemp
  - Released 1.0pre1
 
-$Id: ChangeLog,v 1.1962 2002/03/22 03:40:58 mouring Exp $
+$Id: ChangeLog,v 1.1963 2002/03/22 03:43:46 mouring Exp $
